# test_thrift_lua

./: CMakeLists.txt  GoTo.i  GoTo.thrift  GoToClient.cpp  GoToClient.lua  TextGoToServer.cpp  test_bt.lua
